cmake_minimum_required(VERSION 3.20.0)
project(quantlib-vcpkg-example LANGUAGES CXX)
add_executable(quantlib-vcpkg-example main.cpp)
target_include_directories(quantlib-vcpkg-example PRIVATE ${CMAKE_BINARY_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET}/include)
target_link_directories(quantlib-vcpkg-example PRIVATE ${CMAKE_BINARY_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET}$<$<CONFIG:Debug>:/debug>/lib)
if(WIN32)
  target_link_libraries(quantlib-vcpkg-example debug QuantLib-x64-mt-sgd.lib optimized QuantLib-x64-mt-s.lib)
else()
  target_link_libraries(quantlib-vcpkg-example QuantLib)
endif()
